<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_terima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/terima_dari"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_keterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/keterangan"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/et_terima"
        app:layout_constraintEnd_toEndOf="@id/et_terima"
        app:layout_constraintTop_toBottomOf="@id/et_terima"/>

    <EditText
        android:id="@+id/et_jumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jumlah"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/et_keterangan"
        app:layout_constraintEnd_toEndOf="@id/et_keterangan"
        app:layout_constraintTop_toBottomOf="@id/et_keterangan"/>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/et_jumlah"
        app:layout_constraintEnd_toEndOf="@id/et_jumlah"
        app:layout_constraintTop_toBottomOf="@id/et_jumlah"/>

</androidx.constraintlayout.widget.ConstraintLayout>