<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_terima_dari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/terima_dari"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_keterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/keterangan"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_terima_dari"
        app:layout_constraintStart_toStartOf="@id/tv_terima_dari"/>

    <TextView
        android:id="@+id/tv_jumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/jumlah"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_keterangan"
        app:layout_constraintStart_toStartOf="@id/tv_keterangan"/>

    <TextView
        android:id="@+id/tv_nomor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/jumlah"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_jumlah"
        app:layout_constraintStart_toStartOf="@id/tv_jumlah"/>

</androidx.constraintlayout.widget.ConstraintLayout>